[package]
name = "cafe-rs"
version = "0.1.0"
authors = ["29th-Day"]
edition = "2024"
license-file = "LICENSE"
keywords = ["wiiu", "homebrew"]

[lib]
test = false
bench = false

[features]
default = []
rt = ["dep:cafe-rt"]
panic = ["cafe-rt?/panic"]
alloc = ["cafe-rt?/alloc"]

[dependencies]
bitflags = "2.10.0"
bon = { version = "3.8.2", default-features = false }
cafe-rt = { path = "../cafe-rt", version = "*", optional = true }
cafe-sys = { path = "../cafe-sys", version = "*" }
log = "0.4.29"
num_enum = { version = "0.7.5", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
